force-app/main/default/objects/Roster_Management__c/Roster_Management__c.object-meta.xml
<CustomObject>
    <label>Roster Management</label>
    <nameField>
        <displayFormat>RM-{000000}</displayFormat>
        <label>Roster Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roster Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>