force-app/main/default/objects/Roster_Management__c/fields/Absent_Submit__c.field-meta.xml
<CustomField>
    <fullName>Absent_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Absent Submit</label>
    <type>Checkbox</type>
</CustomField>