force-app/main/default/objects/Roster_Management__c/fields/DO_DL__c.field-meta.xml
<CustomField>
    <fullName>DO_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO/DL</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Roster Managements</relationshipLabel>
    <relationshipName>Roster_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>