force-app/main/default/objects/Roster_Management__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <formula>Shift__r.From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From</label>
    <type>Time</type>
</CustomField>