force-app/main/default/objects/Roster_Management__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>Shift__c</referenceTo>
    <relationshipLabel>Roster Managements</relationshipLabel>
    <relationshipName>Roster_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>