force-app/main/default/objects/Roster_Management__c/fields/Shift_Code__c.field-meta.xml
<CustomField>
    <fullName>Shift_Code__c</fullName>
    <label>Shift Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>