force-app/main/default/objects/Roster_Management__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Roster Managements</relationshipLabel>
    <relationshipName>Roster_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>