force-app/main/default/objects/Roster_Management__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <formula>Shift__r.To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To</label>
    <type>Time</type>
</CustomField>