force-app/main/default/objects/Roster_Management__c/fields/Work_Hour__c.field-meta.xml
<CustomField>
    <fullName>Work_Hour__c</fullName>
    <formula>Shift__r.Shift_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>